# EDR_Prive

./: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE_SYSTEM.md  Makefile  PLATFORM_ROADMAP.md  README.md  docker-compose.yml  generate_dashboards_pro.py  schema.sql
agent/: Cargo.toml  build.rs
agent/src/: config.rs  dlp.rs  ebpf.rs  etw.rs  main.rs  telemetry.rs
agent/tests/: integration_dlp.rs
consumer/: Dockerfile  go.mod  main.go
dashboard/: DASHBOARD_RESEARCH.md  README.md  package.json
dashboard/src/services/: api.js
dashboard/src/theme/: theme.js
docs/images/: generate_dashboards.py
ingestor/: Dockerfile  go.mod  main.go
platform/: go.mod
platform/api/: main.go
platform/api/internal/handlers/: agents.go  ai.go  collaborative.go  datalake.go  deception.go  dlp.go  license.go  notifications.go  telemetry.go  websocket.go
platform/api/internal/models/: agent.go  ai.go  collaborative.go  datalake.go  deception.go  dlp.go  notification.go  telemetry.go  websocket.go
platform/database/: database.go  init_postgres.sql
platform/license/crypto/: keygen.go
platform/license/models/: license.go
platform/license/service/: license_service.go
proto/: telemetry.proto
scripts/: generate-proto.sh
