[package]
name = "sentinel-agent"
version = "0.1.0"
edition = "2021"
authors = ["Sentinel Enterprise Team"]
description = "High-performance EDR/DLP agent for Windows and Linux endpoints"

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# Async runtime (minimal footprint for <1% CPU target)
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }
tokio-stream = "0.1"

# System monitoring and process information
sysinfo = "0.30"
libc = "0.2"
hostname = "0.3"

# Hashing for DLP fingerprinting
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Efficient data structures
dashmap = "5.5"
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }

# Logging (lightweight for production)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinSock",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# eBPF for Linux kernel event monitoring
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# Performance-critical profile for production deployment
[profile.production]
inherits = "release"
opt-level = "z"  # Optimize for size (reduces memory footprint)
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
